# KengaAI_Engine

./: .env.local  .gitignore  Cargo.toml  DEVELOPER_GUIDE.md  FINAL_CONCLUSION.md  FINAL_DIAGNOSTIC_REPORT.md  FINAL_REPORT.md  FINAL_REPORT_ENHANCED.md  GAME_TEMPLATE.rs  MINIMAL_EXAMPLE.rs  PROJECT_COMPLETION_REPORT.md  README.md  README_PLAY.md  README_QUICK_START.md  RELEASE.md  SESSION_REPORT.md  SOLUTION_WHITE_SCREEN.md  SYSTEM_ANALYSIS.md  convert_svg_to_png.py  create_floor_texture.py  create_test_texture.py  generate_logo.py  generate_screenshots.py  kengaai_enhanced_demo.html  kengaquest_demo.html  kengaquest_text.py  kengaquest_ultimate.html  logo.html  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  presentation.html  presentation.md  run_diagnostic.bat  run_diagnostics.bat  screenshot_logo.py  start_engine.bat  system_check.bat  tsconfig.json
.cargo/: config.toml
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.next/cache/: .rscinfo  .tsbuildinfo
.next/server/: app-paths-manifest.json  functions-config-manifest.json  middleware-build-manifest.js  middleware-manifest.json  server-reference-manifest.json
.next/server/app/: _not-found.html  _not-found.rsc  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
.next/server/chunks/: 817.js
.next/server/pages/: 500.html
.next/static/Ge5x8NgU2U5F3vw_PHMzN/: _buildManifest.js
.next/static/chunks/: 124-4ffbbca47c0af024.js  main-app-a45477a87b86c89e.js
.next/static/css/: 6fa6b741c6537e13.css
.next/types/app/: layout.ts  page.ts
app/: layout.tsx  page.tsx
app/api/generate-scene/: route.ts
app/api/neural-test/: route.ts
assets/levels/: example_fps.json  kengaai_logo.json  kengaquest_level1.json  kengaquest_level2.json  kengaquest_main.json  lighting_example.json  minimal.json  textured_example.json
components/: scene-preview.tsx
crates/fps/: Cargo.toml
crates/fps/shaders/: bloom.wgsl  box3d.wgsl  lighting.wgsl  lighting_simple.wgsl  particles.wgsl  pbr.wgsl  postprocess.wgsl  shadow.wgsl  simple_fragment.glsl  simple_vertex.glsl  textured_box3d.wgsl
crates/fps/src/: lib.rs
crates/scene_fps/: Cargo.toml
crates/scene_fps/src/: lib.rs
demos/fps/: Cargo.toml
demos/fps/src/: main.rs
demos/gpu_test/: Cargo.toml
demos/gpu_test/src/: main.rs
demos/kengaquest/: Cargo.toml  README.md
demos/kengaquest/src/: main.rs
demos/minimal/: Cargo.toml
demos/minimal/src/: main.rs
demos/no-code/src/: main.rs
demos/simple_test/: Cargo.toml
demos/simple_test/src/: main.rs
docs/: SCENES.md
lib/: download.ts  prompt-templates.ts  schema.ts
studio/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
studio/src/: main.tsx  styles.css
studio/src-tauri/: Cargo.toml  tauri.conf.json
studio/src-tauri/src/: main.rs
(+32 files in other folders)
