[workspace]
members = [
  "crates/core",
  "crates/renderer",
  "crates/input",
  "crates/audio",
  "crates/physics",
  "crates/scripting",
  "crates/ui",
  "crates/tools",
  "crates/scene_fps",
  "crates/fps",
  "engine-cli",
  "editor",
  "demos/minimal",
  "demos/no-code",
  "demos/fps",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["KengaAI Team"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = "0.27"
winit = "0.29"
wgpu = "0.20"
pollster = "0.3"
hashbrown = "0.14"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
bytemuck = { version = "1", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = 0
