[package]
name = "kengaai-fps"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
kengaai-scene-fps = { path = "../scene_fps" }
image = "0.24"
rapier3d = "0.17"
rodio = "0.17"
